# openupf

./: CMakeLists.txt  LICENSE  README.md
config/fpu/: fpu_dpdk_docker.ini
config/lbu/: lbu_docker.ini
config/smu/: smu_docker.ini
config/smu/predef/: reference_template.json  test_predef.json
core/: .gitignore  CMakeLists.txt  main.c
core/include/: common.h  common_config.h  common_typedef.h
core/platform/: CMakeLists.txt
core/platform/buffer/: buffer.c  buffer.h
core/platform/cli/: CMakeLists.txt  cli.c  cli.h  cli_main.c  libcli.c  libcli.h
core/platform/debug/: CMakeLists.txt  cm_debug.c  cm_debug.h
core/platform/include/: platform.h
core/platform/log/: log.c  log.h
core/platform/ros/: ros.c  ros.h
core/platform/ros/ros_timer/: ros_timer.c  ros_timer.h
core/platform/trans/: trans.c  trans.h
core/service/: CMakeLists.txt  service.c  service.h
core/service/common/: CMakeLists.txt  comm_msg.c  comm_msg.h  compress_func.c  compress_func.h  key_extract.c  key_extract.h  parse_session_config.c  parse_session_config.h  pfcp_def.h  session_struct.h
core/service/common/dpdk/: dpdk.c  dpdk.h
core/service/fastpass/: fp_backend_mgmt.c  fp_backend_mgmt.h  fp_dns.c  fp_dns.h  fp_dpdk_adapter.c  fp_dpdk_adapter.h  fp_frag.c  fp_frag.h  fp_fwd_common.c  fp_fwd_common.h  fp_fwd_eth.c  fp_fwd_eth.h  fp_fwd_ipv4.c  fp_fwd_ipv4.h  fp_fwd_ipv6.c  fp_fwd_ipv6.h  fp_fwd_nonip.c  fp_fwd_nonip.h  fp_mac.c  fp_mac.h  fp_main.c  fp_main.h  fp_msg.c  fp_msg.h  fp_qer.c  fp_qer.h  fp_recycle.c  fp_recycle.h  fp_start.c  fp_start.h  fp_urr.c  fp_urr.h
core/service/loadbalancer/: lb_backend_mgmt.c  lb_backend_mgmt.h  lb_ctrl_service.c  lb_ctrl_service.h  lb_dpdk_cache.c  lb_dpdk_cache.h  lb_main.c  lb_main.h  lb_neighbor.c  lb_neighbor.h  lb_neighbor_cache.c  lb_neighbor_cache.h
core/service/pfcp/: pfcp_association.c  pfcp_association.h  pfcp_client.c  pfcp_client.h  pfcp_heartbeat.c  pfcp_heartbeat.h  pfcp_pfd_mgmt.c  pfcp_pfd_mgmt.h  upc_main.c  upc_main.h  upc_node.c  upc_node.h  upc_prerule.c  upc_prerule.h  upc_seid.c  upc_seid.h  upc_session.c  upc_session.h  upc_teid.c  upc_teid.h  upc_temp_buffer.c  upc_temp_buffer.h  upc_ueip.c  upc_ueip.h  white_list.c  white_list.h
core/service/pfcp/session/: bar_mgmt.c  bar_mgmt.h  far_mgmt.c  far_mgmt.h  local_parse.c  local_parse.h  mar_mgmt.c  mar_mgmt.h  pdr_mgmt.c  pdr_mgmt.h  pfd_mgmt.c  pfd_mgmt.h  predefine_rule_mgmt.c  predefine_rule_mgmt.h  qer_mgmt.c  qer_mgmt.h  session.c  session.h  session_audit.c  session_audit.h  session_check.c  session_check.h  session_ethernet.c  session_ethernet.h  session_instance.c  session_instance.h  session_match.c  session_match.h  session_mgmt.c  session_mgmt.h  session_msg.c  session_msg.h  session_orphan.c  session_orphan.h  session_report.c  session_report.h  session_teid.c  session_teid.h  sp_backend_mgmt.c  sp_backend_mgmt.h  (+10 more)
core/util/avllib/: avllib.c  avllib.h  avluint64lib.c  avluint64lib.h  avluintlib.c  avluintlib.h
core/util/crc/: crc.c  crc.h
core/util/fsm/: fsm.c  fsm.h
core/util/hash/: hash16.c  hash16.h
core/util/http_parse/: picohttpparser.c  picohttpparser.h
core/util/include/: util.h
core/util/libmem/: ros_libmem.c  ros_libmem.h
core/util/libutil/: libutil.c  libutil.h
core/util/link_list/: list.h  lstlib.c  lstlib.h  sllLib.c  sllLib.h
core/util/md5/: md5.c  md5.h
core/util/pcf/: pcf.c  pcf.h
core/util/protocol/: arp_pro.h  eth_pro.h  gtpu_pro.h  icmp_pro.h  ipsec_pro.h  ipv4_pro.h  ipv6_pro.h  proto.h  sctp_pro.h  tcp_pro.h  udp_pro.h  vlan_pro.h
core/util/rbtree/: rbtree.c  rbtree.h
core/util/resmng/: resmng.c  resmng.h
core/util/ros_cycles/: ros_cycles.c  ros_cycles.h
core/util/ros_lock/: ros_atomic.h  ros_lock.c  ros_lock.h  ros_rwlock.h  ros_spinlock.h
core/util/rqueue/: rqueue.c  rqueue.h
core/util/tlvparse/: tlv_parse.c  tlv_parse.h
doc/: Dockerfile  Q&A.md  build_docker_image.md  install&config.md  quick_start.md  references.md  set_dpdk_config.md
install/: .gitignore
install/script/: docker_clr.sh  docker_dpdk_run_upf.sh  install-dep.sh  start_upf.sh
libs/: .gitignore  prometheus_config.yml
libs/grafana_dashboaed/: fpu-private.json  fpu-public.json  smu-public.json
